--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>SASS: Lite bättre än vanlig CSS</title>
-   <link rel="stylesheet" href="/assets/css/global.css">
+   <link rel="stylesheet" href="/assets/css/global.min.css">
 </head>
 <body>
    <div class="container">
@@ -34,6 +34,6 @@
          <div>&copy; 2020</div>
       </footer>
    </div>
-   <script src="/assets/js/global.js"></script>
+   <script src="/assets/js/global.min.js"></script>
 </body>
 </html>
