--- a/src/index.html
+++ b/src/index.html
@@ -9,29 +9,42 @@
 <body>
    <div class="container">
       <header class="site-header">
-         <h1 class="logo">SASS</h1>
-         <nav class="primary-nav">
-            <ul>
-               <li><a href="#0">Home</a></li>
-               <li><a href="#0">About</a></li>
-               <li><a href="#0">Services</a></li>
-               <li><a href="#0">Blog</a></li>
-               <li><a href="#0">Contact</a></li>
-            </ul>
-         </nav>
+         <div class="wrap">
+            <h1 class="logo">SASS</h1>
+            <nav class="primary-nav">
+               <ul>
+                  <li><a href="#0">Home</a></li>
+                  <li><a href="#0">About</a></li>
+                  <li><a href="#0">Services</a></li>
+                  <li><a href="#0">Blog</a></li>
+                  <li><a href="#0">Contact</a></li>
+               </ul>
+            </nav>
+         </div>
       </header>
 
       <main class="page-content">
-         <h2>Vad är SASS?</h2>
-         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis deleniti dolor rem vitae optio. Sit dolorum laboriosam neque. Quae deleniti asperiores sequi delectus veniam quaerat praesentium magnam, omnis cum distinctio atque? Fugit quisquam ipsam eius, dignissimos eos a quaerat placeat id maxime minima necessitatibus quod, beatae veniam obcaecati, recusandae architecto quia nobis eveniet. Corporis magni, iste quos dolor expedita exercitationem reprehenderit laudantium distinctio, fugit repellat repellendus natus unde iusto pariatur accusamus voluptatem sed fuga aliquam ullam velit modi. Corporis soluta a harum quo, temporibus corrupti nemo veniam adipisci aspernatur unde pariatur necessitatibus, laudantium amet! Provident doloribus voluptate tempora ab tempore est, eaque doloremque! Incidunt saepe vero beatae in aut! Animi ut in voluptatibus quos officia exercitationem delectus molestiae at deleniti, quod aliquid quo, tempora ratione provident debitis quam voluptatum et nulla sit saepe temporibus. Sequi voluptates fugiat, laboriosam consectetur cumque quas, tempora fuga omnis dolor ipsa corporis, est maxime in.</p>
-         <h2>Varför ska jag använda SASS?</h2>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam enim doloribus, adipisci odit explicabo voluptatem architecto illo minus qui iste, voluptates dicta sint tempore, sunt deserunt non optio commodi quae! Cum officiis repudiandae atque quisquam rem! Minima sint porro, consequuntur aspernatur placeat eveniet sequi nobis possimus omnis natus non voluptatibus molestiae iusto nihil eius! Soluta ipsam cumque, sunt corrupti nihil veniam cupiditate enim harum, nisi accusantium voluptatum tempora labore. Suscipit.</p>
+         <div class="wrap">
+            <h2>Vad är SASS?</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis deleniti dolor rem vitae optio. Sit dolorum laboriosam neque. Quae deleniti asperiores sequi delectus veniam quaerat praesentium magnam.</p>
+            <h3>Variabler</h3>
+            <p>Omnis cum distinctio atque? Fugit quisquam ipsam eius, dignissimos eos a quaerat placeat id maxime minima necessitatibus quod, beatae veniam obcaecati, recusandae architecto quia nobis eveniet. Corporis magni, iste quos dolor expedita exercitationem reprehenderit laudantium distinctio, fugit repellat repellendus natus unde iusto pariatur accusamus voluptatem sed fuga aliquam ullam velit modi.</p>
+            <h3>Nesting</h3>
+            <p>Corporis soluta a harum quo, temporibus corrupti nemo veniam adipisci aspernatur unde pariatur necessitatibus, laudantium amet! Provident doloribus voluptate tempora ab tempore est, eaque doloremque! Incidunt saepe vero beatae in aut!</p>
+            <h3>Mixins</h3>
+            <p>Animi ut in voluptatibus quos officia exercitationem delectus molestiae at deleniti, quod aliquid quo, tempora ratione provident debitis quam voluptatum et nulla sit saepe temporibus. Sequi voluptates fugiat, laboriosam consectetur cumque quas, tempora fuga omnis dolor ipsa corporis, est maxime in.</p>
+            <h2>Varför ska jag använda SASS?</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam enim doloribus, adipisci odit explicabo voluptatem architecto illo minus qui iste, voluptates dicta sint tempore, sunt deserunt non optio commodi quae!</p>
+            <p>Cum officiis repudiandae atque quisquam rem! Minima sint porro, consequuntur aspernatur placeat eveniet sequi nobis possimus omnis natus non voluptatibus molestiae iusto nihil eius! Soluta ipsam cumque, sunt corrupti nihil veniam cupiditate enim harum, nisi accusantium voluptatum tempora labore. Suscipit.</p>
+         </div>
       </main>
 
       <footer class="site-footer">
-         <div></div>
-         <div></div>
-         <div>&copy; 2020</div>
+         <div class="wrap">
+            <div></div>
+            <div></div>
+            <div>&copy; 2020</div>
+         </div>
       </footer>
    </div>
    <script src="/assets/js/global.min.js"></script>
