--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,14 @@
          </div>
       </header>
 
+      <section class="cta">
+         <div class="wrap">
+            <h2>Är du intresserad av SASS?</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, dolores. Repellat, ullam nesciunt quos quo veritatis voluptas sed quaerat temporibus.</p>
+            <p><a href="#" class="btn">Läs mer</a><a href="#0" class="btn-ghost">Registrera dig</a></p>
+         </div>
+      </section>
+
       <main class="page-content">
          <div class="wrap">
             <h2>Vad är SASS?</h2>
