--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>SASS: Lite bättre än vanlig CSS</title>
-   <link rel="stylesheet" href="/assets/css/global.min.css">
+   <link rel="stylesheet" href="assets/css/global.min.css">
 </head>
 <body>
    <div class="container">
@@ -42,12 +42,12 @@
             <p>Corporis soluta a harum quo, temporibus <em>corrupti nemo veniam adipisci</em> aspernatur unde pariatur necessitatibus, laudantium amet! Provident doloribus voluptate tempora ab tempore est, eaque doloremque! Incidunt saepe vero beatae in aut!</p>
             <h3>Mixins</h3>
             <p>Animi ut in voluptatibus quos officia exercitationem delectus molestiae at deleniti, quod aliquid quo, tempora ratione provident debitis quam voluptatum et nulla sit saepe temporibus. Sequi voluptates fugiat, laboriosam consectetur cumque quas, tempora fuga omnis dolor ipsa corporis, est maxime in.</p>
-            <img src="/assets/images/img1.jpg" alt="Dator på skrivbord">
+            <img src="assets/images/img1.jpg" alt="Dator på skrivbord">
             <h2>Varför ska jag använda SASS?</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam enim doloribus, adipisci odit explicabo voluptatem architecto illo minus qui iste, voluptates dicta sint tempore, sunt deserunt non optio commodi quae!</p>
             <h3>Pure awesomeness</h3>
             <p>Cum officiis repudiandae atque quisquam rem! Minima sint porro, consequuntur aspernatur placeat eveniet sequi nobis possimus omnis natus non voluptatibus molestiae iusto nihil eius! Soluta ipsam cumque, sunt corrupti nihil veniam cupiditate enim harum, nisi accusantium voluptatum tempora labore. Suscipit.</p>
-            <img src="/assets/images/img2.jpg" alt="Man med laptop i knät">
+            <img src="assets/images/img2.jpg" alt="Man med laptop i knät">
          </div>
       </main>
 
@@ -59,6 +59,6 @@
          </div>
       </footer>
    </div>
-   <script src="/assets/js/global.min.js"></script>
+   <script src="assets/js/global.min.js"></script>
 </body>
 </html>
