--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>SASS: Lite bättre än vanlig CSS</title>
-   <link rel="stylesheet" href="assets/css/global.min.css">
+   <link rel="stylesheet" href="assets/styles/global.min.css">
 </head>
 <body>
    <div class="container">
@@ -53,12 +53,10 @@
 
       <footer class="site-footer">
          <div class="wrap">
-            <div></div>
-            <div></div>
             <div>&copy; 2020 &middot; Johannes Nilsson &middot; DT173G, Moment 3 &middot; HT20</div>
          </div>
       </footer>
    </div>
-   <script src="assets/js/global.min.js"></script>
+   <script src="assets/scripts/main.min.js"></script>
 </body>
 </html>
