--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,11 +13,11 @@
             <h1 class="logo">SASS Demo</h1>
             <nav class="primary-nav">
                <ul>
-                  <li><a href="#0">Home</a></li>
-                  <li><a href="#0">About</a></li>
-                  <li><a href="#0">Services</a></li>
-                  <li><a href="#0">Blog</a></li>
-                  <li><a href="#0">Contact</a></li>
+                  <li><a href="#0">Hem</a></li>
+                  <li><a href="#0">Om</a></li>
+                  <li><a href="#0">Tjänster</a></li>
+                  <li><a href="#0">Blogg</a></li>
+                  <li><a href="#0">Kontakt</a></li>
                </ul>
             </nav>
          </div>
@@ -53,7 +53,7 @@
 
       <footer class="site-footer">
          <div class="wrap">
-            <div>&copy; 2020 &middot; Johannes Nilsson &middot; DT173G, Moment 3 &middot; HT20</div>
+            <div>&copy; 2021 &middot; Johannes Nilsson &middot; DT173G, Moment 3 &middot; HT21</div>
          </div>
       </footer>
    </div>
